--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,6 @@ section {
   margin: 0 auto;
   padding: 0 120px;
   margin-top: 80px;
-  gap: 50px;
 }
 .main__content {
   width: 50%;
@@ -189,7 +188,7 @@ section {
   flex-direction: column;
   align-items: center;
   background-color: #3d76fb;
-  padding: 30px 200px;
+
   border-radius: 10px;
 }
 .services__nav {
@@ -228,7 +227,6 @@ section {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 50px;
 }
 .services__item {
   display: flex;
@@ -309,4 +307,124 @@ section {
   border-top: 3px solid #fff;
 
   cursor: pointer;
+}
+.girl__image {
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 1472px) {
+  .services__subcontainer {
+    padding: 50px 50px;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .main__content h1 {
+    font-size: 45px;
+  }
+  .main__content p {
+    font-size: 20px;
+    margin-top: 10px;
+  }
+  .main__content {
+    width: 40%;
+  }
+
+  .main__content2 {
+    width: 60%;
+  }
+}
+@media screen and (max-width: 992px) {
+  .services__subcontainer {
+    padding: 20px 20px;
+  }
+}
+
+@media screen and (max-width: 860px) {
+  .main__content h1 {
+    font-size: 35px;
+  }
+  .main__content p {
+    font-size: 18px;
+  }
+  .main__page {
+    flex-direction: column;
+  }
+  .main__content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .main__content2 {
+    width: 100%;
+  }
+  .main__content h1 {
+    font-size: 35px;
+  }
+  .main__content p {
+    font-size: 18px;
+  }
+  .services__container {
+    height: 900px;
+  }
+  .services__subcontainer {
+    width: 547px;
+    height: 50%;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+  }
+  .services__item {
+    font-size: 16px;
+    width: 110px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .main__content2 {
+    display: none;
+  }
+  .main__content h1 {
+    text-align: center;
+    width: 300px;
+    font-size: 35px;
+  }
+  .main__content p {
+    font-size: 18px;
+    width: 300px;
+    text-align: center;
+  }
+  .services__item {
+    transform: scale(0.8);
+  }
+  .services__subcontainer {
+    width: 312px;
+    height: 50%;
+    display: flex;
+    position: relative;
+    top: -35px;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+  }
+  .services__item {
+    height: 60px;
+    width: 60px;
+  }
+  .services__item:hover {
+    background-color: inherit;
+  }
+  .services__container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 600px;
+  }
+  .footer {
+    justify-content: center;
+  }
 }
