--- a/src/components/nakrutka.module.css
+++ b/src/components/nakrutka.module.css
@@ -7,13 +7,13 @@
 }
 
 .img {
-  width: 150px;
-  height: 150px;
+  width: 90px;
+  height: 90px;
   border-radius: 50%;
 }
 
 .services__container {
-  height: 60%;
+  height: 500px;
 
   width: 100%;
   display: grid;
@@ -38,6 +38,13 @@
   background-color: #3d76fb;
   transition: 0.1s;
   cursor: pointer;
+}
+
+.hhh {
+  text-align: center;
+  color: #000000;
+  padding-bottom: 15px;
+  font-weight: 400;
 }
 
 .element:hover {
@@ -66,6 +73,10 @@
   flex-direction: column;
   gap: 30px;
 }
+.p {
+  color: #000000;
+  font-size: 65px;
+}
 
 .right {
   padding-top: 25px;
@@ -73,6 +84,17 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
+}
+
+.input {
+  width: 90%;
+  height: 80px;
+  font-size: 35px;
+  outline: none;
+  background-color: white;
+  padding-left: 10px;
+  border: 2px solid #000000;
+  border-radius: 5px;
 }
 
 .p {
@@ -86,4 +108,93 @@
 }
 .span:hover {
   text-decoration: underline;
+}
+
+@media screen and (max-width: 1520px) {
+  .input {
+    font-size: 20px;
+  }
+  .p {
+    font-size: 35px;
+  }
+}
+
+@media screen and (max-width: 685px) {
+  .calculator__cont {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 20%;
+    padding-top: 50px;
+  }
+  .left {
+    padding: 0;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 200px;
+  }
+  .right {
+    display: none;
+  }
+  .p {
+    font-size: 20px;
+    text-align: center;
+  }
+  .input {
+    width: 100%;
+    height: 60px;
+  }
+}
+
+@media screen and (max-width: 1020px) {
+  .input {
+    font-size: 22px;
+    width: 75%;
+  }
+  .p {
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .input {
+    font-size: 18px;
+    width: 75%;
+  }
+  .p {
+    font-size: 20px;
+  }
+
+  .services__container {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    height: fit-content;
+    gap: 10px;
+  }
+  .element {
+    flex-direction: row;
+    gap: 10px;
+    height: 80px;
+    width: 100%;
+    justify-content: flex-start;
+    padding-left: 10px;
+  }
+
+  .img {
+    width: 60px;
+    height: 60px;
+  }
+}
+@media screen and (max-width: 720px) {
+  .services__container {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(1fr * 12);
+    height: 500px;
+    overflow: scroll;
+  }
+  .element {
+    width: 90%;
+  }
 }
